# matchmaker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  OPEN_SOURCE_LICENSES.md  README.md  Test_Speech_recognition.ipynb  Test_hmm_for_music_audio.ipynb  environment.yml  notebook.py  pyproject.toml  requirements.txt  setup.py  spike.py  test_dihmm.py  test_hmm.py
.github/workflows/: pypi_publish.yml  test.yml  test_pypi_publish.yml
docs/: requirements.txt
docs/source/: citation.rst  conf.py  index.rst  install.rst  introduction.rst  usage.rst
docs/source/modules/: matchmaker.dp.rst  matchmaker.io.rst  matchmaker.prob.rst  (+1 more)
matchmaker/: __init__.py  base.py  matchmaker.py
matchmaker/assets/: mozart_k265_var1.match  mozart_k265_var1_annotations.txt
matchmaker/dp/: __init__.py  dtw_loop.pyx  oltw_arzt.py  oltw_dixon.py
matchmaker/features/: __init__.py  audio.py  midi.py
matchmaker/io/: __init__.py  audio.py  audio_example_jiyun.py  mediator.py  midi.py
matchmaker/prob/: __init__.py  hmm.py  score_hmm.py
matchmaker/rl/: __init__.py
matchmaker/utils/: __init__.py  audio.py  distances.pxd  eval.py  midi.py  misc.py  processor.py  stream.py  symbolic.py  tempo_models.py  typing.py
tests/: __init__.py  test_base.py  test_features_audio.py  test_features_midi.py  test_init.py  test_io.py  test_io_audio.py  test_io_mediator.py  test_io_midi.py  test_matchmaker.py  test_oltw_arzt.py  test_prob_hmm.py  test_processor.py  test_utils_audio.py  test_utils_misc.py  test_utils_processor.py  test_utils_stream.py  test_utils_symbolic.py  utils.py
