[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=3.0.0", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymatchmaker"
version = "0.1.0"
description = "A package for real-time music alignment"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
keywords = ["music", "alignment", "midi", "audio"]
authors = [
    { name = "Matchmaker Development Team", email = "carloscancinochacon@gmail.com" },
]
urls = { Homepage = "https://github.com/CarlosCancino-Chacon/matchmaker" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cython>=3.0.0",
    "python-rtmidi>=1.5.8",
    "mido>=1.3.0",
    "numpy>=1.26.0",
    "scipy>=1.11.3",
    "librosa>=0.10.1",
    "partitura>=1.5.0",
    "madmom>=0.17.dev0",
    "python-hiddenmarkov>=0.1.3",
    "pyaudio>=0.2.14",
    "pyfluidsynth>=1.3.3",
]

[tool.setuptools.packages.find]
exclude = ["tests"]
